# ai-chat-cli

./: Cargo.toml  README.md  mcp.json
src/: builtin_tools.rs  cli.rs  distributed.rs  executor.rs  main.rs  mcp_client.rs  mcp_config.rs  mcp_manager.rs  ollama.rs
